# hypnerotomachia

./: README.md  hypnerotomachia.cabal  runtest
resources/: cmudict.txt  common_words.txt
src/: Dictionary.hs  Main.hs  Pronunciation.hs  Rhyme.hs  Scansion.hs  Sonnet.hs  Syllable.hs
src/Data/: Trie.hs
test/: MainSpec.hs  PronunciationSpec.hs  ScansionSpec.hs
test/Data/: TrieSpec.hs
