name:                hypnerotomachia
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hypnerotomachia#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hypnerotomachia
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: src, test
  main-is: Spec.hs
  build-depends:   base == 4.*
                 , hspec
  default-language: Haskell2010
