name:                hypnerotomachia
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hypnerotomachia#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       array >= 0.5.1.0
                     , base >= 4.7 && < 5
                     , containers
                     , mtl >= 2.2.1
                     , random >= 1.1
                     , regex-pcre
  default-language:    Haskell2010

executable hypnerotomachia
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       array >= 0.5.1.0
                     , base >= 4.7 && < 5
                     , hypnerotomachia
                     , mtl >= 2.2.1
                     , random >= 1.1
                     , containers
                     , regex-pcre

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: src, test
  main-is: Spec.hs
  build-depends:   array >= 0.5.1.0
                 , base == 4.*
                 , hspec
                 , hypnerotomachia
                 , mtl >= 2.2.1
                 , random >= 1.1
                 , regex-pcre
  default-language: Haskell2010
